--- a/tests/Sentiment_Analysis_Twitter_Data.ipynb
+++ b/tests/Sentiment_Analysis_Twitter_Data.ipynb
@@ -24,7 +24,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "id": "ee30e583-f0f5-481a-b934-6009505578e4",
    "metadata": {},
    "outputs": [],
@@ -38,6 +38,24 @@
     "#nltk.download('vader_lexicon')\n",
     "from nltk.sentiment.vader import SentimentIntensityAnalyzer"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "id": "4991f5b9-606e-4c28-952b-54ba94a3ac8a",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import flair"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "8dd5bbd9-12d6-4cf9-988b-456272a70c5a",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "markdown",
@@ -1149,9 +1167,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Master_Thesis",
+   "display_name": "master_thesis_3.9.10",
    "language": "python",
-   "name": "master_thesis"
+   "name": "master_thesis_3.9.10"
   },
   "language_info": {
    "codemirror_mode": {
@@ -1163,7 +1181,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.2"
+   "version": "3.9.10"
   }
  },
  "nbformat": 4,
