--- a/Untitled.ipynb
+++ b/Untitled.ipynb
@@ -452,9 +452,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Master_Thesis",
+   "display_name": "master_thesis_3.9.10",
    "language": "python",
-   "name": "master_thesis"
+   "name": "master_thesis_3.9.10"
   },
   "language_info": {
    "codemirror_mode": {
@@ -466,7 +466,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.2"
+   "version": "3.9.10"
   }
  },
  "nbformat": 4,
