I have done the manual sentiment analysis for 1500 German and 1500 English tweets. I have finished the sentiment analysis in English and I have done the BERT part in German. I have saved some files, to be sure that everything is working fine and I do not have to run the BERT analysis again, as they take a lot of time.

--- a/tests/Data_Preparation/Preparation_German_Tweets.ipynb
+++ b/tests/Data_Preparation/Preparation_German_Tweets.ipynb
@@ -69,7 +69,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df_manager_de = pd.read_csv(\"/Users/tobias/Dev/FOM/Master_Thesis/data/Manager_DE/data.csv\", sep=\";\", \n",
+    "df_manager_de = pd.read_csv(\"/Users/tobias/Dev/FOM/Master_Thesis/data/Raw_File/Manager_DE/data.csv\", sep=\";\", \n",
     "                            converters={\"tweet_type\": lambda x: x.strip(\"[]\").replace(\"'\", \"\").split(\", \"),\n",
     "                                        \"referenced_tweet_id\": lambda x: x.strip(\"[]\").replace(\"'\", \"\").split(\", \")},\n",
     "                           parse_dates=[\"created_at\"])\n",
@@ -78,7 +78,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 21,
    "id": "22b21fc9-fc5e-4403-8390-093caa12eb23",
    "metadata": {
     "tags": []
@@ -235,7 +235,7 @@
        "4  RT @aktionaer: #Wirecard: Was führt der Vorsta...  "
       ]
      },
-     "execution_count": 3,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -255,12 +255,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "id": "052a6f1c-58c3-45d1-8591-3553b3eb1662",
    "metadata": {
     "tags": []
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "conversation_id:  703311366262800384 type:  <class 'numpy.int64'>\n",
+      "author_id:  1392131804 type:  <class 'numpy.int64'>\n",
+      "created_at:  2016-02-26 20:11:11+00:00 type:  <class 'pandas._libs.tslibs.timestamps.Timestamp'>\n",
+      "tweet_id:  703311366262800384 type:  <class 'numpy.int64'>\n",
+      "lang:  de type:  <class 'str'>\n",
+      "retweet_count:  0 type:  <class 'numpy.int64'>\n",
+      "reply_count:  0 type:  <class 'numpy.int64'>\n",
+      "like_count:  2 type:  <class 'numpy.int64'>\n",
+      "quote_count:  0 type:  <class 'numpy.int64'>\n",
+      "source:  Twitter Web Client type:  <class 'str'>\n",
+      "tweet_type:  None type:  <class 'str'>\n",
+      "referenced_tweet_id:  None type:  <class 'str'>\n",
+      "text:  #Wirecard-Chef Markus Braun pumpt irrwitzige Summen in sein Unternehmen. Woher stammt das Geld? @SchreiberDohms  https://t.co/VdsV4nvBe4 type:  <class 'str'>\n"
+     ]
+    }
+   ],
    "source": [
     "print(\"conversation_id: \", df_manager_de.iloc[0][\"conversation_id\"], \"type: \", type(df_manager_de.iloc[0][\"conversation_id\"]))\n",
     "print(\"author_id: \", df_manager_de.iloc[0][\"author_id\"], \"type: \", type(df_manager_de.iloc[0][\"author_id\"]))\n",
@@ -278,6 +298,86 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 25,
+   "id": "15a91841-6f75-4f27-9357-d1bfe231ae9a",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['DER FALL WIRECARDWie Ex-Chef Markus Braun den Konzern in die Insolvenz trieb ']\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(df_manager_de.loc[df_manager_de[\"tweet_id\"] == 1276693029131296769][\"text\"].values)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "id": "5c8f3c61-10ff-42c9-b26e-632be3b6779e",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>conversation_id</th>\n",
+       "      <th>author_id</th>\n",
+       "      <th>created_at</th>\n",
+       "      <th>tweet_id</th>\n",
+       "      <th>lang</th>\n",
+       "      <th>retweet_count</th>\n",
+       "      <th>reply_count</th>\n",
+       "      <th>like_count</th>\n",
+       "      <th>quote_count</th>\n",
+       "      <th>source</th>\n",
+       "      <th>tweet_type</th>\n",
+       "      <th>referenced_tweet_id</th>\n",
+       "      <th>text</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "Empty DataFrame\n",
+       "Columns: [conversation_id, author_id, created_at, tweet_id, lang, retweet_count, reply_count, like_count, quote_count, source, tweet_type, referenced_tweet_id, text]\n",
+       "Index: []"
+      ]
+     },
+     "execution_count": 32,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df_manager_de.loc[df_manager_de.text.str.contains(\"\\r\")]"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "id": "afc009d8-9b2e-491f-8e13-b4e8b7658a44",
    "metadata": {},
@@ -288,7 +388,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 24,
    "id": "86e7ed3f-d0f4-46bc-a651-d575074bfbd6",
    "metadata": {
     "tags": []
@@ -299,7 +399,7 @@
     "    df_manager_de.loc[df_manager_de[\"text\"] == \n",
     "                      df_manager_de.loc[each][\"text\"], \"text\"] = re.sub(r'http\\S+', '', \n",
     "                                                                        (re.sub('@[^\\s]+', '',\n",
-    "                                                                                re.sub('[#|$]', '', \n",
+    "                                                                                re.sub('[#|$|\\r]', '',\n",
     "                                                                                       df_manager_de.loc[each][\"text\"]))))"
    ]
   },
@@ -1359,7 +1459,6 @@
    "cell_type": "markdown",
    "id": "f269bdc2-f185-4241-9bbe-5a65d1c81ff7",
    "metadata": {
-    "jp-MarkdownHeadingCollapsed": true,
     "tags": []
    },
    "source": [
