--- a/tests/Sentiment_Analysis_Twitter_Data.ipynb
+++ b/tests/Sentiment_Analysis_Twitter_Data.ipynb
@@ -57,6 +57,7 @@
    "cell_type": "markdown",
    "id": "0273f0b3-217e-459d-aaf9-359edcaf0c01",
    "metadata": {
+    "jp-MarkdownHeadingCollapsed": true,
     "tags": []
    },
    "source": [
