Added a few updates

--- a/prod/Regression/Regression.ipynb
+++ b/prod/Regression/Regression.ipynb
@@ -48,10 +48,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 80,
    "id": "e3fa8ccf-34f9-4526-8d3f-f3ef2662eab1",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/var/folders/3r/0dwb2f6j0f39f4r2j9yyjf180000gn/T/ipykernel_3156/2487132561.py:45: SettingWithCopyWarning: \n",
+      "A value is trying to be set on a copy of a slice from a DataFrame\n",
+      "\n",
+      "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
+      "  df_de[\"Week\"][each] = df_de[\"Week\"][each] + 1\n"
+     ]
+    }
+   ],
    "source": [
     "#Load German Sentiment CSV file.\n",
     "df_de = pd.read_csv(\"/Users/tobias/Dev/FOM/Master_Thesis/data/Sentiment_Analysis/Dataset_DE_Bert_Vader.csv\", sep=\";\",\n",
@@ -79,15 +91,45 @@
     "        df_de_week_year.iloc[each][\"Week\"] = 52\n",
     "\n",
     "#Adding the week and year information to the df\n",
-    "df_de[[\"Week\", \"Year\"]] = df_de_week_year[[\"Week\", \"Year\"]]"
+    "df_de[[\"Week\", \"Year\"]] = df_de_week_year[[\"Week\", \"Year\"]]\n",
+    "\n",
+    "tweet_id_friday_list = []\n",
+    "for each in range(len(df_de)):\n",
+    "    if (df_de[\"Date\"][each].isocalendar().year == 2016) & (df_de[\"Date\"][each].isocalendar().week == 12) & (df_de[\"Date\"][each].isocalendar().weekday == 5):\n",
+    "        tweet_id_friday_list.append(each)\n",
+    "    elif (df_de[\"Date\"][each].isocalendar().year == 2017) & (df_de[\"Date\"][each].isocalendar().week == 15) & (df_de[\"Date\"][each].isocalendar().weekday == 5):\n",
+    "        tweet_id_friday_list.append(each)\n",
+    "    elif (df_de[\"Date\"][each].isocalendar().year == 2018) & (df_de[\"Date\"][each].isocalendar().week == 13) & (df_de[\"Date\"][each].isocalendar().weekday == 5):\n",
+    "        tweet_id_friday_list.append(each)\n",
+    "    elif (df_de[\"Date\"][each].isocalendar().year == 2019) & (df_de[\"Date\"][each].isocalendar().week == 16) & (df_de[\"Date\"][each].isocalendar().weekday == 5):\n",
+    "        tweet_id_friday_list.append(each)\n",
+    "    elif (df_de[\"Date\"][each].isocalendar().year == 2020) & (df_de[\"Date\"][each].isocalendar().week == 15) & (df_de[\"Date\"][each].isocalendar().weekday == 5):\n",
+    "        tweet_id_friday_list.append(each)\n",
+    "    elif (df_de[\"Date\"][each].isocalendar().year == 2020) & (df_de[\"Date\"][each].isocalendar().week == 18) & (df_de[\"Date\"][each].isocalendar().weekday == 5):\n",
+    "        tweet_id_friday_list.append(each)\n",
+    "\n",
+    "for each in tweet_id_friday_list:\n",
+    "    df_de[\"Week\"][each] = df_de[\"Week\"][each] + 1"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 81,
    "id": "467f3bf8-1a24-4956-a4bf-a3b094bd9d9f",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/var/folders/3r/0dwb2f6j0f39f4r2j9yyjf180000gn/T/ipykernel_3156/1593085834.py:44: SettingWithCopyWarning: \n",
+      "A value is trying to be set on a copy of a slice from a DataFrame\n",
+      "\n",
+      "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
+      "  df_en[\"Week\"][each] = df_en[\"Week\"][each] + 1\n"
+     ]
+    }
+   ],
    "source": [
     "#Load English Sentiment CSV file.\n",
     "df_en = pd.read_csv(\"/Users/tobias/Dev/FOM/Master_Thesis/data/Sentiment_Analysis/Dataset_Bert_Vader.csv\", sep=\";\",\n",
@@ -114,12 +156,30 @@
     "        df_en_week_year.iloc[each][\"Week\"] = 52\n",
     "        \n",
     "#Adding the week and year information to the df\n",
-    "df_en[[\"Week\", \"Year\"]] = df_en_week_year[[\"Week\", \"Year\"]]"
+    "df_en[[\"Week\", \"Year\"]] = df_en_week_year[[\"Week\", \"Year\"]]\n",
+    "        \n",
+    "tweet_id_friday_list = []\n",
+    "for each in range(len(df_en)):\n",
+    "    if (df_en[\"Date\"][each].isocalendar().year == 2016) & (df_en[\"Date\"][each].isocalendar().week == 12) & (df_en[\"Date\"][each].isocalendar().weekday == 5):\n",
+    "        tweet_id_friday_list.append(each)\n",
+    "    elif (df_en[\"Date\"][each].isocalendar().year == 2017) & (df_en[\"Date\"][each].isocalendar().week == 15) & (df_en[\"Date\"][each].isocalendar().weekday == 5):\n",
+    "        tweet_id_friday_list.append(each)\n",
+    "    elif (df_en[\"Date\"][each].isocalendar().year == 2018) & (df_en[\"Date\"][each].isocalendar().week == 13) & (df_en[\"Date\"][each].isocalendar().weekday == 5):\n",
+    "        tweet_id_friday_list.append(each)\n",
+    "    elif (df_en[\"Date\"][each].isocalendar().year == 2019) & (df_en[\"Date\"][each].isocalendar().week == 16) & (df_en[\"Date\"][each].isocalendar().weekday == 5):\n",
+    "        tweet_id_friday_list.append(each)\n",
+    "    elif (df_en[\"Date\"][each].isocalendar().year == 2020) & (df_en[\"Date\"][each].isocalendar().week == 15) & (df_en[\"Date\"][each].isocalendar().weekday == 5):\n",
+    "        tweet_id_friday_list.append(each)\n",
+    "    elif (df_en[\"Date\"][each].isocalendar().year == 2020) & (df_en[\"Date\"][each].isocalendar().week == 18) & (df_en[\"Date\"][each].isocalendar().weekday == 5):\n",
+    "        tweet_id_friday_list.append(each)\n",
+    "\n",
+    "for each in tweet_id_friday_list:\n",
+    "    df_en[\"Week\"][each] = df_en[\"Week\"][each] + 1"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 82,
    "id": "0488f3b9-17c3-4538-bec2-556c8f08b657",
    "metadata": {},
    "outputs": [],
@@ -146,7 +206,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 83,
    "id": "c0760bbd-5bfd-4c51-a97c-13caa01b8abe",
    "metadata": {},
    "outputs": [],
@@ -178,7 +238,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 84,
    "id": "b15ffe86-961d-4473-b6db-24f15de55f70",
    "metadata": {},
    "outputs": [],
@@ -192,7 +252,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 85,
    "id": "8d535620-9a68-4cff-bf54-469b89d3025b",
    "metadata": {},
    "outputs": [],
@@ -256,7 +316,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 86,
    "id": "ac684914-0476-4759-9eb9-ebab0db5a078",
    "metadata": {},
    "outputs": [],
@@ -279,7 +339,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 87,
    "id": "554f92ff-fb42-4dfc-85ac-7bc480f4e462",
    "metadata": {},
    "outputs": [],
@@ -310,7 +370,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 88,
    "id": "49ffd6b2-7ea6-4425-ae32-548027fd5b35",
    "metadata": {},
    "outputs": [],
@@ -340,7 +400,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 89,
    "id": "f32f94f5-bae5-416d-809f-397e81eadfd6",
    "metadata": {},
    "outputs": [],
@@ -428,7 +488,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 105,
    "id": "4a36a907-612d-4a33-a016-43225f369d24",
    "metadata": {},
    "outputs": [
@@ -438,31 +498,30 @@
      "text": [
       "                            OLS Regression Results                            \n",
       "==============================================================================\n",
-      "Dep. Variable:           returns_week   R-squared:                       0.760\n",
-      "Model:                            OLS   Adj. R-squared:                  0.753\n",
-      "Method:                 Least Squares   F-statistic:                     102.3\n",
-      "Date:                Sun, 23 Oct 2022   Prob (F-statistic):           1.86e-66\n",
-      "Time:                        22:04:46   Log-Likelihood:                 306.10\n",
-      "No. Observations:                 234   AIC:                            -596.2\n",
-      "Df Residuals:                     226   BIC:                            -568.6\n",
-      "Df Model:                           7                                         \n",
+      "Dep. Variable:           returns_week   R-squared:                       0.748\n",
+      "Model:                            OLS   Adj. R-squared:                  0.742\n",
+      "Method:                 Least Squares   F-statistic:                     112.6\n",
+      "Date:                Fri, 28 Oct 2022   Prob (F-statistic):           3.48e-65\n",
+      "Time:                        19:50:26   Log-Likelihood:                 300.53\n",
+      "No. Observations:                 234   AIC:                            -587.1\n",
+      "Df Residuals:                     227   BIC:                            -562.9\n",
+      "Df Model:                           6                                         \n",
       "Covariance Type:            nonrobust                                         \n",
       "=============================================================================================\n",
       "                                coef    std err          t      P>|t|      [0.025      0.975]\n",
       "---------------------------------------------------------------------------------------------\n",
-      "const                         0.1263      0.175      0.720      0.472      -0.219       0.472\n",
-      "dif_sentiment_bert_value   4.945e-05   1.45e-05      3.399      0.001    2.08e-05    7.81e-05\n",
-      "dif_sentiment_vader_value     0.0001   2.35e-05      5.665      0.000    8.68e-05       0.000\n",
-      "returns_stoxx                 0.5001      0.190      2.626      0.009       0.125       0.875\n",
-      "returns_ma                    0.1617      0.303      0.534      0.594      -0.435       0.758\n",
-      "returns_visa                  0.2187      0.366      0.598      0.550      -0.502       0.939\n",
-      "Volume                     3.521e-07   4.54e-07      0.775      0.439   -5.43e-07    1.25e-06\n",
-      "count_all_tweets           -1.06e-05    6.4e-06     -1.656      0.099   -2.32e-05    2.02e-06\n",
+      "const                         0.1328      0.179      0.741      0.459      -0.220       0.486\n",
+      "dif_sentiment_vader_value     0.0002   1.98e-05      9.210      0.000       0.000       0.000\n",
+      "returns_stoxx                 0.5124      0.195      2.634      0.009       0.129       0.896\n",
+      "returns_ma                    0.2032      0.309      0.657      0.512      -0.406       0.812\n",
+      "returns_visa                  0.1602      0.373      0.429      0.668      -0.575       0.895\n",
+      "Volume                     1.092e-06   3.94e-07      2.770      0.006    3.15e-07    1.87e-06\n",
+      "count_all_tweets          -2.011e-05    5.7e-06     -3.525      0.001   -3.13e-05   -8.87e-06\n",
       "==============================================================================\n",
-      "Omnibus:                       47.850   Durbin-Watson:                   2.257\n",
-      "Prob(Omnibus):                  0.000   Jarque-Bera (JB):              309.892\n",
-      "Skew:                          -0.566   Prob(JB):                     5.10e-68\n",
-      "Kurtosis:                       8.523   Cond. No.                     4.40e+06\n",
+      "Omnibus:                       60.706   Durbin-Watson:                   2.362\n",
+      "Prob(Omnibus):                  0.000   Jarque-Bera (JB):              375.187\n",
+      "Skew:                          -0.830   Prob(JB):                     3.38e-82\n",
+      "Kurtosis:                       8.977   Cond. No.                     4.40e+06\n",
       "==============================================================================\n",
       "\n",
       "Notes:\n",
@@ -475,10 +534,9 @@
    "source": [
     "regressor = [\"dif_sentiment_bert_value\", \"returns_stoxx\", \"returns_ma\", \"returns_visa\", \"Volume\", \"count_all_tweets\"]\n",
     "regressor = [\"dif_sentiment_vader_value\", \"returns_stoxx\", \"returns_ma\", \"returns_visa\", \"Volume\", \"count_all_tweets\"]\n",
-    "regressor = [\"dif_sentiment_bert_value\", \"dif_sentiment_vader_value\", \"returns_stoxx\", \"returns_ma\", \"returns_visa\", \"Volume\", \"count_all_tweets\"]\n",
     "regressand = [\"returns_week\"]\n",
     "\n",
-    "df_week_reg = create_df(df)\n",
+    "df_week_reg = create_df()\n",
     "        \n",
     "reg_predictions, reg_model = regression(df_week_reg, regressor, regressand)"
    ]
@@ -2159,11 +2217,197 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 106,
    "id": "f39aa6fb-601d-4041-92ae-58945a42b17c",
    "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "6\n",
+      "2016\n",
+      "12\n",
+      "4\n",
+      "2016-03-24\n",
+      "\n",
+      "\n",
+      "61\n",
+      "2017\n",
+      "15\n",
+      "4\n",
+      "2017-04-13\n",
+      "\n",
+      "\n",
+      "111\n",
+      "2018\n",
+      "13\n",
+      "4\n",
+      "2018-03-29\n",
+      "\n",
+      "\n",
+      "166\n",
+      "2019\n",
+      "16\n",
+      "4\n",
+      "2019-04-18\n",
+      "\n",
+      "\n",
+      "217\n",
+      "2020\n",
+      "15\n",
+      "4\n",
+      "2020-04-09\n",
+      "\n",
+      "\n",
+      "220\n",
+      "2020\n",
+      "18\n",
+      "4\n",
+      "2020-04-30\n",
+      "\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "for each in range(len(df_week_reg)):\n",
+    "    if df_week_reg[\"Date\"][each].isocalendar().weekday != 5:\n",
+    "        print(each)\n",
+    "        print(df_week_reg[\"Date\"][each].isocalendar().year)\n",
+    "        print(df_week_reg[\"Date\"][each].isocalendar().week)\n",
+    "        print(df_week_reg[\"Date\"][each].isocalendar().weekday)\n",
+    "        print(df_week_reg[\"Date\"][each])\n",
+    "        print(\"\\n\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 62,
+   "id": "9abd36df-ada5-4275-b929-590f2ed4832f",
+   "metadata": {
+    "tags": []
+   },
    "outputs": [],
-   "source": []
+   "source": [
+    "tweet_id_friday_list = []\n",
+    "for each in range(len(df_en)):\n",
+    "    if (df_en[\"Date\"][each].isocalendar().year == 2016) & (df_en[\"Date\"][each].isocalendar().week == 12) & (df_en[\"Date\"][each].isocalendar().weekday == 5):\n",
+    "        tweet_id_friday_list.append(each)\n",
+    "    elif (df_en[\"Date\"][each].isocalendar().year == 2017) & (df_en[\"Date\"][each].isocalendar().week == 15) & (df_en[\"Date\"][each].isocalendar().weekday == 5):\n",
+    "        tweet_id_friday_list.append(each)\n",
+    "    elif (df_en[\"Date\"][each].isocalendar().year == 2018) & (df_en[\"Date\"][each].isocalendar().week == 13) & (df_en[\"Date\"][each].isocalendar().weekday == 5):\n",
+    "        tweet_id_friday_list.append(each)\n",
+    "    elif (df_en[\"Date\"][each].isocalendar().year == 2019) & (df_en[\"Date\"][each].isocalendar().week == 16) & (df_en[\"Date\"][each].isocalendar().weekday == 5):\n",
+    "        tweet_id_friday_list.append(each)\n",
+    "    elif (df_en[\"Date\"][each].isocalendar().year == 2020) & (df_en[\"Date\"][each].isocalendar().week == 15) & (df_en[\"Date\"][each].isocalendar().weekday == 5):\n",
+    "        tweet_id_friday_list.append(each)\n",
+    "    elif (df_en[\"Date\"][each].isocalendar().year == 2020) & (df_en[\"Date\"][each].isocalendar().week == 18) & (df_en[\"Date\"][each].isocalendar().weekday == 5):\n",
+    "        tweet_id_friday_list.append(each)\n",
+    "\n",
+    "for each in tweet_id_friday_list:\n",
+    "    df_en[\"Week\"][each] = df_en[\"Week\"][each] + 1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 77,
+   "id": "a35414f1-1510-4203-90fd-58558ac056a7",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "18"
+      ]
+     },
+     "execution_count": 77,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df_en[\"Week\"][tweet_id_friday_list[0]]+1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 78,
+   "id": "de6b65d9-687b-4baa-b9d2-ab0cbd6e9a0b",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "17"
+      ]
+     },
+     "execution_count": 78,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df_en[\"Week\"][tweet_id_friday_list[0]]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 91,
+   "id": "10035770-248f-41b9-9e6b-13d33b24056f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "tweet_id_friday_list = []\n",
+    "for each in range(len(df_de)):\n",
+    "    if (df_de[\"Date\"][each].isocalendar().year == 2016) & (df_de[\"Date\"][each].isocalendar().week == 12) & (df_de[\"Date\"][each].isocalendar().weekday == 5):\n",
+    "        tweet_id_friday_list.append(each)\n",
+    "    elif (df_de[\"Date\"][each].isocalendar().year == 2017) & (df_de[\"Date\"][each].isocalendar().week == 15) & (df_de[\"Date\"][each].isocalendar().weekday == 5):\n",
+    "        tweet_id_friday_list.append(each)\n",
+    "    elif (df_de[\"Date\"][each].isocalendar().year == 2018) & (df_de[\"Date\"][each].isocalendar().week == 13) & (df_de[\"Date\"][each].isocalendar().weekday == 5):\n",
+    "        tweet_id_friday_list.append(each)\n",
+    "    elif (df_de[\"Date\"][each].isocalendar().year == 2019) & (df_de[\"Date\"][each].isocalendar().week == 16) & (df_de[\"Date\"][each].isocalendar().weekday == 5):\n",
+    "        tweet_id_friday_list.append(each)\n",
+    "    elif (df_de[\"Date\"][each].isocalendar().year == 2020) & (df_de[\"Date\"][each].isocalendar().week == 15) & (df_de[\"Date\"][each].isocalendar().weekday == 5):\n",
+    "        tweet_id_friday_list.append(each)\n",
+    "    elif (df_de[\"Date\"][each].isocalendar().year == 2020) & (df_de[\"Date\"][each].isocalendar().week == 18) & (df_de[\"Date\"][each].isocalendar().weekday == 5):\n",
+    "        tweet_id_friday_list.append(each)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 92,
+   "id": "f9e7d4f3-3849-4ea5-872d-afeffba6498c",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "215"
+      ]
+     },
+     "execution_count": 92,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "len(tweet_id_friday_list)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "c72fe045-95e7-4191-a3c1-636706749856",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "for each in range(len(df_en_week_year)):\n",
+    "    if ((df_en_week_year.iloc[each][\"Weekday\"] > 5) & (df_en_week_year.iloc[each][\"Week\"] != 1)):\n",
+    "        df_en_week_year.iloc[each][\"Week\"] = df_en_week_year.iloc[each][\"Week\"] - 1\n",
+    "    elif ((df_en_week_year.iloc[each][\"Weekday\"] > 5) & (df_en_week_year.iloc[each][\"Week\"] == 1)):\n",
+    "        df_en_week_year.iloc[each][\"Week\"] = 52"
+   ]
   }
  ],
  "metadata": {
