I have updated the files, so that the filenames contains only the required information.

--- a/prod/Sentiment_Analysis/Sentiment_Deutsch.ipynb
+++ b/prod/Sentiment_Analysis/Sentiment_Deutsch.ipynb
@@ -3,7 +3,9 @@
   {
    "cell_type": "markdown",
    "id": "a8a5229d-0ea6-41f7-83ab-c55d0e1ad87c",
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "source": [
     "<H1>Sentiment Analyse Deutsch</H1>"
    ]
